# diceroll

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
diceroll/: Cargo.toml
diceroll/src/: eval.rs  lib.rs  model.rs  parser.rs  stats.rs
diceroll_cli/: Cargo.toml
diceroll_cli/src/: main.rs  repl.rs  server.rs
diceroll_wasm/: Cargo.toml  build.sh
diceroll_wasm/src/: lib.rs
diceroll_wasm/www/: index.html  index.js  site.webmanifest
src/: eval.rs  format.rs  lib.rs  main.rs  model.rs  parser.rs  repl.rs  server.rs  stats.rs
