[package]
name = "diceroll"
version = "0.1.0"
authors = ["Dimitri Lozeve"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
lexopt = "0.3"
rand = "0.9"
nom = "8"
thiserror = "2"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
form_urlencoded = "1"

[lints.clippy]
# Safety - treat as errors
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Code quality - warnings
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# pedantic = { level = "warn", priority = -1 }
# missing_errors_doc = "allow"

# Cargo
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
