[workspace]
members = ["diceroll", "diceroll_cli", "diceroll_wasm"]
resolver = "3"

[workspace.lints.clippy]
# Safety - treat as errors
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Code quality - warnings
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Cargo
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
opt-level = "s"
lto = true
