[package]
name = "diceroll"
version = "0.2.0"
authors = ["Dimitri Lozeve"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
rand = { version = "0.10", default-features = false }
nom = "8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
