[package]
name = "diceroll_wasm"
version = "0.1.0"
authors = ["Dimitri Lozeve"]
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
diceroll = { path = "../diceroll" }
wasm-bindgen = "0.2"
serde = "1"
serde-wasm-bindgen = "0.6"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = { version = "0.1", optional = true }

[lints]
workspace = true
